[package]
name = "skirt"
description = "sync but sinplocks"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abbiecnt/skirt"
keywords = ["sync"]
categories = ["no-std"]

[features]
std = ["portable-atomic/std"]
nightly = []
portable = ["dep:portable-atomic"]

[dependencies]
portable-atomic = { version = "1.10.0", optional = true }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "deny"
